--- a/_includes/entry.html
+++ b/_includes/entry.html
@@ -1,33 +1,35 @@
-{% if post.id %}
-  {% assign title = post.title | markdownify | strip_html %}
+{% assign item = post | default: update %}
+
+{% if item.id %}
+  {% assign title = item.title | markdownify | strip_html %}
 {% else %}
-  {% assign title = post.title %}
+  {% assign title = item.title %}
 {% endif %}
 
 <article class="entry">
   <header class="entry-header">
     <h3 class="entry-title">
-      <a href="{{ post.url | relative_url }}" rel="bookmark">{{ title }}</a>
+      <a href="{{ item.url | relative_url }}" rel="bookmark">{{ title }}</a>
     </h3>
-    {% if post.image.thumbnail %}
-      {% assign entry_image = post.image.thumbnail | relative_url | escape %}
+    {% if item.image and item.image.thumbnail %}
+      {% assign entry_image = item.image.thumbnail | relative_url | escape %}
       <img class="entry-image u-photo" src="{{ entry_image }}" alt="">
     {% endif %}
   </header>
   <footer class="entry-meta">
     <ul>
-    {% if post.date %}
-      <li><span class="icon">{% include icon-calendar.svg %}</span><time class="entry-time" datetime="{{ post.date | date_to_xmlschema }}">{{ post.date | date: "%B %-d, %Y" }}</time></li>
+    {% if item.date %}
+      <li><span class="icon">{% include icon-calendar.svg %}</span><time class="entry-time" datetime="{{ item.date | date_to_xmlschema }}">{{ item.date | date: "%B %-d, %Y" }}</time></li>
     {% endif %}
-    {% if post.read_time %}
+    {% if item.read_time %}
       <li><span class="icon">{% include icon-stopwatch.svg %}</span>{% capture read_time %}{% include read-time.html %}{% endcapture %}{{ read_time | strip }}</li>
     {% endif %}
     </ul>
   </footer>
   <div class="entry-excerpt">
-    {% if post.excerpt %}
-      {{ post.excerpt | markdownify }}
-      <p><a href="{{ post.url | relative_url }}" class="more-link">{{ site.data.theme.t.read_more | default: 'Read More' }} <span class="icon icon--arrow-right">{% include icon-arrow-right.svg %}</span></a></p>
+    {% if item.excerpt %}
+      {{ item.excerpt | markdownify }}
+      <p><a href="{{ item.url | relative_url }}" class="more-link">{{ site.data.theme.t.read_more | default: 'Read More' }} <span class="icon icon--arrow-right">{% include icon-arrow-right.svg %}</span></a></p>
     {% endif %}
   </div>
 </article>
